# idalib

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CNAME  CONTRIBUTORS.md  Cargo.toml  GITHUB-ACTIONS.md  README.md  crates.js  help.html  ida-plugin.json  ida_plugin_stub.py  index.html  search-index.js  settings.html  src-files.js
idalib/: Cargo.toml  all.html  build.rs  enum.IDAError.html  fn.enable_console_messages.html  fn.force_batch_mode.html  fn.init_library.html  fn.version.html  index.html  sidebar-items.js  struct.AddressFlags.html  struct.IDAVersion.html  type.Address.html
idalib-build/: Cargo.toml  build.rs
idalib-build/src/: lib.rs
idalib-sys/: Cargo.toml  build.rs
idalib-sys/src/: bookmarks_extras.h  bytes_extras.h  comments_extras.h  entry_extras.h  func_extras.h  hexrays_extras.h  idalib_extras.h  inf_extras.h  insn_extras.h  kernwin_extras.h  lib.rs  loader_extras.h  nalt_extras.h  name_extras.h  ph_extras.h  platform.rs  search_extras.h  segm_extras.h  strings_extras.h  types.h  types_extras.h
idalib/bookmarks/: index.html  sidebar-items.js  struct.Bookmarks.html  type.BookmarkIndex.html
idalib/decompiler/: enum.HexRaysErrorCode.html  index.html  sidebar-items.js  struct.CBlock.html  struct.CBlockIter.html  struct.CFunction.html  struct.CInsn.html  struct.HexRaysError.html
idalib/examples/: bookmarks_ls.rs  comments.rs  comments_ls.rs  decrypt_strings.rs  dump_ls.rs  license_check.rs  names_ls.rs  patfind_ls.rs  strings_ls.rs  types_ls.rs
idalib/func/: index.html  sidebar-items.js  struct.BasicBlock.html  struct.Function.html  struct.FunctionCFG.html  struct.FunctionCFGFlags.html  struct.FunctionFlags.html  type.BasicBlockId.html  type.FunctionId.html
idalib/idb/: index.html  sidebar-items.js  struct.EntryPointIter.html  struct.IDB.html  struct.IDBOpenOptions.html
idalib/insn/: enum.OperandDataType.html  enum.OperandType.html  index.html  sidebar-items.js  struct.Insn.html  struct.IsReturnFlags.html  struct.Operand.html  struct.OperandFlags.html  type.InsnType.html  type.Phrase.html  type.Register.html
idalib/insn/arm/: constant.ARM_abs.html  constant.ARM_adc.html  constant.ARM_add.html  constant.ARM_addg.html  constant.ARM_addhn.html  constant.ARM_addhn2.html  constant.ARM_addp.html  constant.ARM_addv.html  constant.ARM_adr.html  constant.ARM_adrl.html  constant.ARM_adrp.html  constant.ARM_aesd.html  constant.ARM_aese.html  constant.ARM_aesimc.html  constant.ARM_aesmc.html  constant.ARM_amx.html  constant.ARM_and.html  constant.ARM_asr.html  constant.ARM_asrl.html  constant.ARM_at.html  constant.ARM_aut.html  constant.ARM_autg.html  constant.ARM_axflag.html  constant.ARM_b.html  constant.ARM_bcax.html  constant.ARM_bf.html  constant.ARM_bfc.html  constant.ARM_bfcsel.html  constant.ARM_bfcvt.html  constant.ARM_bfcvtn.html  constant.ARM_bfcvtn2.html  constant.ARM_bfdot.html  constant.ARM_bfi.html  constant.ARM_bfl.html  constant.ARM_bflx.html  constant.ARM_bfm.html  constant.ARM_bfmlalb.html  constant.ARM_bfmlalt.html  constant.ARM_bfmmla.html  constant.ARM_bfx.html  (+1113 more)
idalib/insn/mips/: constant.MIPS_R5900_first.html  constant.MIPS_R5900_last.html  constant.MIPS_absq_s_ph.html  constant.MIPS_absq_s_pw.html  constant.MIPS_absq_s_qb.html  constant.MIPS_absq_s_qh.html  constant.MIPS_absq_s_w.html  constant.MIPS_ac0iu.html  constant.MIPS_add.html  constant.MIPS_addi.html  constant.MIPS_addiu.html  constant.MIPS_addiupc.html  constant.MIPS_addmiu.html  constant.MIPS_addq_ph.html  constant.MIPS_addq_pw.html  constant.MIPS_addq_qh.html  constant.MIPS_addq_s_ph.html  constant.MIPS_addq_s_pw.html  constant.MIPS_addq_s_qh.html  constant.MIPS_addq_s_w.html  constant.MIPS_addqh_ph.html  constant.MIPS_addqh_r_ph.html  constant.MIPS_addqh_r_w.html  constant.MIPS_addqh_w.html  constant.MIPS_addsc.html  constant.MIPS_addu.html  constant.MIPS_addu_ob.html  constant.MIPS_addu_ph.html  constant.MIPS_addu_qb.html  constant.MIPS_addu_s_ob.html  constant.MIPS_addu_s_ph.html  constant.MIPS_addu_s_qb.html  constant.MIPS_adduh_qb.html  constant.MIPS_adduh_r_qb.html  constant.MIPS_addwc.html  constant.MIPS_alnv_ps.html  constant.MIPS_aluipc.html  constant.MIPS_and.html  constant.MIPS_andi.html  constant.MIPS_append.html  (+1677 more)
idalib/insn/x86/: constant.NN_aaa.html  constant.NN_aad.html  constant.NN_aam.html  constant.NN_aas.html  constant.NN_adc.html  constant.NN_adcx.html  constant.NN_add.html  constant.NN_addpd.html  constant.NN_addps.html  constant.NN_addsd.html  constant.NN_addss.html  constant.NN_addsubpd.html  constant.NN_adox.html  (+1935 more)
idalib/license/: fn.is_valid_license.html  fn.license_id.html  index.html  sidebar-items.js  struct.LicenseId.html
idalib/meta/: enum.Compiler.html  enum.FileType.html  index.html  sidebar-items.js  struct.AnalysisFlags.html  struct.AnalysisFlags2.html  struct.Metadata.html  struct.MetadataMut.html  struct.ShowXRefFlags.html
idalib/name/: index.html  sidebar-items.js  struct.Name.html  struct.NameList.html  struct.NameListIter.html  struct.NameProperties.html  type.NameIndex.html
idalib/plugin/: index.html  sidebar-items.js  struct.Plugin.html  struct.PluginFlags.html
idalib/processor/: index.html  sidebar-items.js  struct.Processor.html  struct.ProcessorFamily.html  type.ProcessorId.html
idalib/segment/: enum.SegmentAlignment.html  enum.SegmentType.html  index.html  sidebar-items.js  struct.Segment.html  struct.SegmentPermissions.html  type.SegmentId.html
idalib/src/: bookmarks.rs  decompiler.rs  func.rs  idb.rs  import.rs  insn.rs  lib.rs  license.rs  meta.rs  name.rs  plugin.rs  processor.rs  segment.rs  strings.rs  tests.rs  types.rs  xref.rs
idalib/strings/: index.html  sidebar-items.js  struct.StringList.html  struct.StringListIter.html  type.StringIndex.html
idalib/tests/: test_bytes.rs  test_heads.rs  test_imports.rs  test_instructions.rs  test_metadata.rs  test_search.rs  test_segments.rs  test_strings.rs  test_x86_operands.rs  test_xrefs.rs
idalib/xref/: enum.CodeRef.html  enum.DataRef.html  enum.XRefType.html  index.html  sidebar-items.js  struct.XRef.html  struct.XRefFlags.html  struct.XRefQuery.html
(+6173 files in other folders)
