[package]
name = "idalib-build"
authors = ["Sam L. Thomas <sam@binarly.io>", "Yegor Vasilenko <yegor@binarly.io>", "Marco Ivaldi <raptor@0xdeadbeef.info>"]
version = "0.7.1+9.2.250908"
description = "Idiomatic bindings to IDA SDK"
repository = "https://github.com/binarly-io/idalib"
documentation = "https://idalib.rs/idalib_build"
homepage = "https://idalib.rs"
keywords = ["reverse-engineering", "ida", "ida-pro", "idalib"]
categories = ["security"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
idalib-sys = { version = "0.7", path = "../idalib-sys" }