[package]
name = "idalib-sys"
authors = ["Sam L. Thomas <sam@binarly.io>", "Yegor Vasilenko <yegor@binarly.io>", "Marco Ivaldi <raptor@0xdeadbeef.info>"]
version = "0.6.1+9.1.250226"
description = "Idiomatic bindings to IDA SDK"
repository = "https://github.com/binarly-io/idalib"
documentation = "https://idalib.rs/idalib_sys"
homepage = "https://idalib.rs"
keywords = ["reverse-engineering", "ida", "ida-pro", "idalib"]
categories = ["security"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
autocxx = "0.28"
bitflags = "2"
cxx = "1"
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }

[build-dependencies]
autocxx-bindgen = "0.72"
autocxx-build = "0.28"
cxx-build = "1"
