[package]
name = "idalib-sys"
authors = ["Sam L. Thomas <sam@binarly.io>", "Yegor Vasilenko <yegor@binarly.io>", "Marco Ivaldi <raptor@0xdeadbeef.info>"]
version = "0.7.1+9.2.250908"
description = "Idiomatic bindings to IDA SDK"
repository = "https://github.com/binarly-io/idalib"
documentation = "https://idalib.rs/idalib_sys"
homepage = "https://idalib.rs"
keywords = ["reverse-engineering", "ida", "ida-pro", "idalib"]
categories = ["security"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2024"
build = "build.rs"
links = "idalib"
include = [
    "/build.rs",
    "/src",
    "/sdk/src/include",
    "/sdk/src/lib/x64_linux_gcc_64/*.so",
    "/sdk/src/lib/x64_mac_clang_64/*.dylib",
    "/sdk/src/lib/arm64_mac_clang_64/*.dylib",
    "/sdk/src/lib/x64_win_vc_64/*.lib",
]

[dependencies]
anyhow = "1"
autocxx = "0.27"
bitflags = "2"
cxx = "1"
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Threading"] }

[build-dependencies]
autocxx-bindgen = "0.71"
autocxx-build = "0.27"
cxx-build = "1"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
wildcard_imports = "allow"
enum_glob_use = "allow"
unreadable_literal = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"
must_use_candidate = "allow"