[package]
name = "idalib"
authors = ["Sam L. Thomas <sam@binarly.io>", "Yegor Vasilenko <yegor@binarly.io>", "Marco Ivaldi <raptor@0xdeadbeef.info>"]
version = "0.6.1+9.1.250226"
description = "Idiomatic bindings to IDA SDK"
repository = "https://github.com/binarly-io/idalib"
documentation = "https://idalib.rs/idalib"
homepage = "https://idalib.rs"
keywords = ["reverse-engineering", "ida", "ida-pro", "idalib"]
categories = ["security"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1"
autocxx = "0.28"
bitflags = "2"
cxx = "1"
idalib-sys = { version = "0.6", path = "../idalib-sys" }
thiserror = "1"
 
[dev-dependencies]
tempdir = "0.3"

[build-dependencies]
idalib-build = { version = "0.6", path = "../idalib-build" }

# Tests that load idalib must be run on the main thread;
# however, the default test harness runs tests in threads,
# even if you set `--test-threads=1`.
# So we have to use custom test binaries to run our IDB tests.
# see: https://stackoverflow.com/a/43458688
[[test]]
name = "test_bytes"
path = "tests/test_bytes.rs"
harness = false

[[test]]
name = "test_heads"
path = "tests/test_heads.rs"
harness = false

[[test]]
name = "test_imports"
path = "tests/test_imports.rs"
harness = false

[[test]]
name = "test_strings"
path = "tests/test_strings.rs"
harness = false

[[test]]
name = "test_xrefs"
path = "tests/test_xrefs.rs"
harness = false
